Q-0.8.2d58
[new] Quartz: selective drawing code
[new] Quartz: is default now

Q-0.8.2d57
[fix] FSToolbar: added localization

Q-0.8.2d56
[fix] downloader: declaration fixes

Q-0.8.2d54
[fix] build/commit fixes
[fix] semitransparent color in FSToolbar now predefined
[fix] deleted old reference to qemu-0.8.1 sources in build_i386.sh

Q-0.8.2d53
[fix] set qemu revision in prepare.sh to 2006-07-24 18:00 instead of current CVS, because current CVS fails to build right now (thx Dravick)
[new] added new freeoszoo images
[fix] removed obsolete dns patch
[new] fullscreen toolbar
[fix] shutdown PC from fullscreen changing workspace
[fix] typo in NewPC Assistant
[fix] add downloader, networking redirect to Localizable.strings
[fix] downloader: remove tiger dependent code
[fix] downloader: add connection timeout error handling
[fix] downloader: add error handling when file is no valid archive (tar, gz, bz)

Q-0.8.2d52
[fix] downloader: crashes on starting download
[fix] changelog was still on qemu 0.8.1, changed to 0.8.2

Q-0.8.2d50
[new] downloader: new download list according to new oszoo pages, moved list to new server 
[fix] Makefile: use -lcrypto instead of full path to libcrypto 
[new] credits: licenses 
[new] downloader: if there is a README file with the downloaded Guest PC, open it in TextEdit after download is finished 
[fix] downloader: leave all files from the downloaded archive in qvm package 
[fix] downloader: finding a folder with .img or .qcow in it's name sets it not as harddisk anymore 
[fix] downloader: add support for gzip files, throw warning when archive is corrupt 
[fix] downloader: downloaded progress not reset when download cancelled or started again 
[fix] downloader: set Transmission revision back to 480 (official version 0.6.1), now using only stable Transmission releases 
[fix] downloader: cancel download when .torrent file could not be downloaded and show error message

Q-0.8.2d47
[fix] streamlined Q Control Guest Infos

Q-0.8.2d46