@@ -1,3 +1,6 @@
+Q-0.8.2d59
+[fix] Quartz: mousegrab released while FS Toolbar is visible
+
 Q-0.8.2d58
 [new] Quartz: selective drawing code
 [new] Quartz: is default now
